Upgrade to Android Studio 2.0

--- a/PR017-AutoCompleteTextView/app/src/main/res/layout/activity_main.xml
+++ b/PR017-AutoCompleteTextView/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/lblConcepto_paddingLeft"
+        android:paddingStart="@dimen/lblConcepto_paddingLeft"
+        android:paddingRight="@dimen/lblConcepto_paddingLeft"
+        android:paddingEnd="@dimen/lblConcepto_paddingLeft"
         android:text="@string/concepto"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/primary_text"/>
