--- a/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
+++ b/PR021-Spinner/app/src/main/res/layout/activity_main_pais_collapsed.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
               android:layout_height="@dimen/collapsed_height"
               android:orientation="horizontal"
               android:paddingLeft="@dimen/collapsed_padding"
-              android:paddingRight="@dimen/collapsed_padding">
+              android:paddingRight="@dimen/collapsed_padding"
+    tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/imgBandera"
