Upgrade to Android Studio 2

--- a/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos_item.xml
+++ b/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos_item.xml
@@ -21,9 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         android:paddingTop="@dimen/three_lines_text_paddingTop"
-        tools:text="Nombre"
+        tools:text="@string/nombre"
         android:textSize="@dimen/three_lines_primary_text_textSize"
         android:textStyle="bold" />
 
@@ -32,8 +34,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
-        tools:text="Curso"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
+        tools:text="@string/curso"
         android:layout_below="@+id/lblNombre"
         android:textSize="@dimen/three_lines_secundary_text_textSize"
         android:textStyle="italic" />
@@ -44,8 +48,10 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/three_lines_text_paddingBottom"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
-        tools:text="Dirección"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
+        tools:text="@string/direccion"
         android:layout_below="@+id/lblCurso"
         android:textSize="@dimen/three_lines_secundary_text_textSize" />
 </RelativeLayout>
