--- a/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos.xml
+++ b/PR028-SQLiteLoader/app/src/main/res/layout/fragment_lista_alumnos.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     <ListView
@@ -34,7 +33,7 @@
             android:text="@string/sin_alumnado_agregue_un_alumno"
             android:gravity="center" />
     </RelativeLayout>
-    <com.software.shell.fab.ActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,10 +41,6 @@
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_plus_icon"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+        android:src="@drawable/ic_add" />
 
 </FrameLayout>
