--- a/PR048-DialogFragment/app/src/main/res/layout/activity_main_item.xml
+++ b/PR048-DialogFragment/app/src/main/res/layout/activity_main_item.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/two_line_text_paddingLeft"
         android:paddingTop="@dimen/two_line_text_paddingTop"
+        android:paddingRight="@dimen/two_line_text_paddingLeft"
         tools:text="Baldomero Llegate Ligero"
         style="@style/Base.TextAppearance.AppCompat.Subhead" />
 
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/two_line_secundary_text_paddingBottom"
         android:paddingLeft="@dimen/two_line_text_paddingLeft"
+        android:paddingRight="@dimen/two_line_text_paddingLeft"
         android:layout_below="@+id/lblNombre"
         tools:text="c/ La casa de Baldomero"
         android:textSize="14sp" />
