--- a/PR048-DialogFragment/app/src/main/res/values/dimens.xml
+++ b/PR048-DialogFragment/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- activity_main -->
     <dimen name="activity_padding">10dp</dimen>
     <dimen name="activity_marginBottom">10dp</dimen>
@@ -15,5 +15,6 @@
     <dimen name="two_line_text_paddingTop">18dp</dimen>
     <dimen name="two_line_secundary_text_paddingBottom">20dp</dimen>
     <dimen name="two_line_text_paddingLeft">72dp</dimen>
-    <dimen name="two_line_text_marginRight">16dp</dimen>
+    <dimen name="two_line_text_marginRight"
+           tools:keep="@dimen/two_line_text_marginRight">16dp</dimen>
 </resources>
