--- a/PR049-FragmentTransaction/app/src/main/res/layout-land/activity_main.xml
+++ b/PR049-FragmentTransaction/app/src/main/res/layout-land/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:baselineAligned="false"
@@ -15,6 +16,7 @@
         android:id="@+id/flDetalle"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="60"/>
+        android:layout_weight="60"
+        tools:ignore="InconsistentLayout"/>
 
 </LinearLayout>
