--- a/PR049-FragmentTransaction/app/src/main/res/layout/fragment_lista_item.xml
+++ b/PR049-FragmentTransaction/app/src/main/res/layout/fragment_lista_item.xml
@@ -13,6 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/lblNombre_textSize"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/lblAnio"
+        android:layout_toStartOf="@+id/lblAnio"
         android:textColor="@color/primary_text"/>
 
     <TextView
@@ -20,6 +24,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lblNombre"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/lblAnio"
+        android:layout_toStartOf="@+id/lblAnio"
         android:textSize="@dimen/lblAutor_textSize"/>
 
     <TextView
@@ -28,7 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/lblAnio"
         android:layout_centerVertical="true"
         android:background="@drawable/lblanio_fondo"
         android:textSize="@dimen/lblAnio_textSize"
