Upgrade to Android Studio 2.1

--- a/PR069-SQLiteDAOSimpleCursorAdapter/app/src/main/res/layout/fragment_lista_alumnos_item.xml
+++ b/PR069-SQLiteDAOSimpleCursorAdapter/app/src/main/res/layout/fragment_lista_alumnos_item.xml
@@ -20,7 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         android:paddingTop="@dimen/three_lines_text_paddingTop"
         tools:text="Nombre"
         android:textSize="@dimen/three_lines_primary_text_textSize"
@@ -31,7 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         tools:text="Curso"
         android:layout_below="@+id/lblNombre"
         android:textSize="@dimen/three_lines_secundary_text_textSize"
@@ -43,7 +47,9 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/three_lines_text_paddingBottom"
         android:paddingLeft="@dimen/three_lines_text_paddingLeft"
+        android:paddingStart="@dimen/three_lines_text_paddingLeft"
         android:paddingRight="@dimen/three_lines_text_paddingRight"
+        android:paddingEnd="@dimen/three_lines_text_paddingRight"
         tools:text="Dirección"
         android:layout_below="@+id/lblCurso"
         android:textSize="@dimen/three_lines_secundary_text_textSize" />
