--- a/PR064-PreferenceFragment/app/src/main/res/layout/toolbar.xml
+++ b/PR064-PreferenceFragment/app/src/main/res/layout/toolbar.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:elevation="@dimen/toolbar_elevation"
-    android:background="@color/primary"
+    android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    tools:showIn="@layout/activity_preferencias" />
+    tools:showIn="@layout/activity_preferencias"
+    tools:ignore="Overdraw,UnusedAttribute" />
 
     
