--- a/PR064-PreferenceFragment/app/src/main/res/values/styles.xml
+++ b/PR064-PreferenceFragment/app/src/main/res/values/styles.xml
@@ -7,4 +7,8 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:background">@color/primary</item>
+    </style>
+
 </resources>
