--- a/PR040-JSON/app/src/main/res/layout/activity_main_item.xml
+++ b/PR040-JSON/app/src/main/res/layout/activity_main_item.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardCornerRadius="@dimen/tarjeta_cardCornerRadius"
+    card_view:cardElevation="@dimen/tarjeta_cardElevation"
+    card_view:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
