--- a/PR089-StartedService/app/src/main/res/layout/activity_main.xml
+++ b/PR089-StartedService/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,31 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/lstCanciones"
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <FrameLayout
+        android:id="@+id/flContenido"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/list_paddingTop"
-        android:divider="@drawable/item_divider"
-        android:dividerHeight="@dimen/list_dividerHeight"
-        android:paddingBottom="@dimen/list_paddingBottom" />
-    <RelativeLayout
-        android:id="@+id/rlListaVacia"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:gravity="center_horizontal|center_vertical" >
-        <ImageView
-            android:id="@+id/imgNuevaCancion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/avatar_marginBottom"
-            android:contentDescription="@string/no_hay_canciones"
-            android:src="@drawable/ic_action_playlist_add" />
-        <TextView
-            android:id="@+id/lblNoHayCanciones"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgNuevaCancion"
-            android:layout_centerHorizontal="true"
-            android:text="@string/no_hay_canciones" />
-    </RelativeLayout>
-    <com.software.shell.fab.ActionButton
+        android:paddingTop="?attr/actionBarSize"/>
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnPlayStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,10 +33,8 @@
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        fab:button_color="@color/accent"
-        fab:button_colorPressed="@color/accent_light"
-        fab:image="@drawable/fab_play"
-        fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down" />
+        android:src="@drawable/fab_play"
+        app:elevation="@dimen/fab_elevation"
+        app:pressedTranslationZ="@dimen/fab_pressedTranslationZ"/>
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
