--- a/PR095-DownloadManager/app/src/main/res/values/dimens.xml
+++ b/PR095-DownloadManager/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <dimen name="three_lines_tile_height">88dp</dimen>
     <dimen name="three_lines_text_paddingLeft">72dp</dimen>
@@ -15,5 +15,7 @@
     <dimen name="list_dividerHeight">1dp</dimen>
     <dimen name="list_paddingBottom">8dp</dimen>
     <dimen name="avatar_marginBottom">20dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_elevation" tools:ignore="UnusedResources">6dp</dimen>
 
 </resources>
