--- a/PR095-DownloadManager/app/src/main/res/values/dimens.xml
+++ b/PR095-DownloadManager/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="avatar_marginBottom">20dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="fab_elevation" tools:ignore="UnusedResources">6dp</dimen>
+    <dimen name="fab_pressedTranslationZ">12dp</dimen>
 
 </resources>
