--- a/PR100-IntentService/app/src/main/res/values/dimens.xml
+++ b/PR100-IntentService/app/src/main/res/values/dimens.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="single_line_tile_height">48dp</dimen>
-    <dimen name="single_line_text_paddingLeft">16dp</dimen>
-    <dimen name="single_line_text_paddingRight">16dp</dimen>
     <dimen name="single_line_text_paddingTop">16dp</dimen>
     <dimen name="single_line_primary_text_textSize">16sp</dimen>
-    <dimen name="single_line_text_paddingBottom">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fab_pressedTranslationZ">12dp</dimen>
 </resources>
