--- a/PR119-Almacenamiento/app/src/main/res/layout/activity_main.xml
+++ b/PR119-Almacenamiento/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,9 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
+        android:id="@+id/rlPadre"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
@@ -37,8 +38,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/assets"
-                android:id="@+id/rbAssets" />
+                android:text="@string/assets" />
         </RadioGroup>
 
         <TextView
