--- a/PR121-FaceCrop/app/src/main/res/values/dimens.xml
+++ b/PR121-FaceCrop/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="ancho_visor">200dp</dimen>
     <dimen name="alto_visor">200dp</dimen>
+    <dimen name="civ_borderWidth">2dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="fav_pressedTranslationZ">12dp</dimen>
 </resources>
