--- a/PR138-Palette/app/src/main/res/layout/activity_main.xml
+++ b/PR138-Palette/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -6,94 +7,93 @@
               tools:context=".MainActivity">
 
     <include
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar"/>
 
     <ImageView
         android:id="@+id/imgFoto"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/imagen"/>
+        android:contentDescription="@string/imagen"
+        android:scaleType="centerCrop"/>
 
-    <LinearLayout
-        android:id="@+id/llMuestras"
+    <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_weight="1">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/lblVibrant"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/vibrante"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
 
-            <TextView
-                android:id="@+id/lblVibrant"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/vibrante"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/lblLightVibrant"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/vibrante_claro"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/lblDarkVibrant"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/vibrante_oscuro"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/lblLightVibrant"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_toRightOf="@+id/lblVibrant"
+            android:layout_toEndOf="@+id/lblVibrant"
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/vibrante_claro"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
 
-            <TextView
-                android:id="@+id/lblMuted"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/apagado"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/lblLightMuted"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/apagado_claro"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-            <TextView
-                android:id="@+id/lblDarkMuted"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/apagado_oscuro"
-                android:padding="@dimen/muestra_padding"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/lblDarkVibrant"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_toRightOf="@+id/lblLightVibrant"
+            android:layout_toEndOf="@+id/lblLightVibrant"
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/vibrante_oscuro"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/lblMuted"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_below="@+id/lblVibrant"
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/apagado"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
+
+        <TextView
+            android:id="@+id/lblLightMuted"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/lblLightVibrant"
+            android:layout_toRightOf="@+id/lblMuted"
+            android:layout_toEndOf="@+id/lblMuted"
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/apagado_claro"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
+
+        <TextView
+            android:id="@+id/lblDarkMuted"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_below="@+id/lblDarkVibrant"
+            android:layout_toRightOf="@+id/lblLightMuted"
+            android:layout_toEndOf="@+id/lblLightMuted"
+            android:gravity="center"
+            android:padding="@dimen/muestra_padding"
+            android:text="@string/apagado_oscuro"
+            app:layout_heightPercent="@fraction/views_height"
+            app:layout_widthPercent="@fraction/views_width"/>
+
+    </android.support.percent.PercentRelativeLayout>
+
 </LinearLayout>
