--- a/PR177-CardViewBinding/app/src/main/res/layout/activity_main.xml
+++ b/PR177-CardViewBinding/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -36,6 +35,7 @@
                     android:layout_alignRight="@+id/txtCuenta"
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
                     android:text="@string/cuenta"
+                    android:labelFor="@+id/txtCuenta"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <TextView
@@ -66,6 +66,7 @@
                     android:gravity="end"
                     android:inputType="numberDecimal"
                     android:selectAllOnFocus="true"
+                    app:emptyValue="@{0.0f}"
                     android:text="@={viewModel.cuenta}" />
 
                 <TextView
@@ -76,6 +77,7 @@
                     android:layout_alignRight="@+id/lblCuenta"
                     android:layout_below="@+id/txtCuenta"
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
+                    android:labelFor="@+id/txtPropina"
                     android:text="@string/Propina"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -131,6 +133,7 @@
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
                     android:layout_toLeftOf="@+id/lblMonedaPorcentaje"
                     android:layout_toStartOf="@+id/lblMonedaPorcentaje"
+                    android:labelFor="@+id/txtPorcentaje"
                     android:text="@string/porcentaje"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -149,6 +152,7 @@
                     android:inputType="number"
                     android:maxLength="3"
                     android:selectAllOnFocus="true"
+                    app:emptyValue="@{0}"
                     android:text="@={viewModel.porcentaje}" />
 
                 <TextView
@@ -159,6 +163,7 @@
                     android:layout_alignRight="@+id/txtCuenta"
                     android:layout_below="@+id/txtPropina"
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
+                    android:labelFor="@+id/txtTotal"
                     android:text="@string/total"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -203,7 +208,7 @@
                     android:layout_marginLeft="@dimen/redondear_marginLeft"
                     android:layout_marginStart="@dimen/redondear_marginLeft"
                     android:text="@string/redondear"
-                    android:onClick="@{viewModel::redondearTotal}"
+                    android:onClick="@{v -> viewModel.redondearTotal(v)}"
                     android:textColor="@color/accent" />
 
                 <Button
@@ -214,6 +219,7 @@
                     android:layout_alignBottom="@+id/btnRedondearTotal"
                     android:layout_toLeftOf="@+id/btnRedondearTotal"
                     android:layout_toStartOf="@+id/btnRedondearTotal"
+                    android:onClick="@{v -> viewModel.resetTotal(v)}"
                     android:text="@string/limpiar" />
 
             </RelativeLayout>
@@ -239,6 +245,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignRight="@+id/txtEscote"
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
+                    android:labelFor="@+id/txtEscote"
                     android:text="@string/por_comensal"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -280,6 +287,7 @@
                     android:layout_marginBottom="@dimen/etiqueta_marginBottom"
                     android:layout_toLeftOf="@+id/txtEscote"
                     android:layout_toStartOf="@+id/txtEscote"
+                    android:labelFor="@+id/txtComensales"
                     android:text="@string/comensales"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -298,6 +306,7 @@
                     android:inputType="number"
                     android:maxLength="3"
                     android:selectAllOnFocus="true"
+                    app:emptyValue="@{1}"
                     android:text="@={viewModel.comensales}" />
 
                 <Button
@@ -311,7 +320,7 @@
                     android:layout_marginLeft="@dimen/redondear_marginLeft"
                     android:layout_marginStart="@dimen/redondear_marginLeft"
                     android:text="@string/redondear"
-                    android:onClick="@{viewModel::redondearEscote}"
+                    android:onClick="@{v -> viewModel.redondearEscote(v)}"
                     android:textColor="@color/accent" />
 
                 <Button
@@ -322,6 +331,7 @@
                     android:layout_alignBottom="@+id/btnRedondearEscote"
                     android:layout_toLeftOf="@+id/btnRedondearEscote"
                     android:layout_toStartOf="@+id/btnRedondearEscote"
+                    android:onClick="@{v -> viewModel.resetEscote(v)}"
                     android:text="@string/limpiar" />
 
             </RelativeLayout>
