--- a/PR165-SortedList/app/src/main/res/layout/activity_main.xml
+++ b/PR165-SortedList/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_24dp"/>
+        android:src="@drawable/ic_add"/>
 
 </android.support.design.widget.CoordinatorLayout>
