--- a/PR165-SortedList/app/src/main/res/layout/activity_main_item.xml
+++ b/PR165-SortedList/app/src/main/res/layout/activity_main_item.xml
@@ -13,6 +13,7 @@
         tools:text="Macarrones integrales"
         android:id="@+id/lblNombre"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/lblUnidades"
         android:layout_toStartOf="@+id/lblUnidades"/>
 
@@ -24,6 +25,8 @@
         android:layout_centerVertical="true"
         android:id="@+id/lblUnidades"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="@dimen/item_padding"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="@dimen/item_padding"
+        android:layout_marginStart="@dimen/item_padding"/>
 
 </RelativeLayout>
