--- a/PR158-Realm/app/src/main/res/layout/activity_detalle.xml
+++ b/PR158-Realm/app/src/main/res/layout/activity_detalle.xml
@@ -14,6 +14,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="@bool/fitsSystemWindows"
@@ -29,6 +30,7 @@
                 android:fitsSystemWindows="@bool/fitsSystemWindows"
                 android:scaleType="centerCrop"
                 android:src="@drawable/placeholder"
+                android:clickable="true"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.3"/>
 
