--- a/PR153-DataBindingRecyclerView/app/src/main/res/layout/activity_main_item.xml
+++ b/PR153-DataBindingRecyclerView/app/src/main/res/layout/activity_main_item.xml
@@ -20,7 +20,6 @@
         android:orientation="vertical">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imgAvatar"
             android:layout_width="@dimen/two_line_avatar_width"
             android:layout_height="@dimen/two_line_avatar_height"
             android:layout_alignParentLeft="true"
@@ -43,13 +42,15 @@
             android:layout_marginEnd="@dimen/two_line_text_marginRight"
             android:layout_marginRight="@dimen/two_line_text_marginRight"
             android:paddingLeft="@dimen/two_line_text_paddingLeft"
+            android:paddingStart="@dimen/two_line_text_paddingLeft"
+            android:paddingRight="@dimen/two_line_text_paddingLeft"
+            android:paddingEnd="@dimen/two_line_text_paddingLeft"
             android:paddingTop="@dimen/two_line_text_paddingTop"
-            android:textSize="@dimen/abc_text_size_subhead_material"
+            style="@style/Base.TextAppearance.AppCompat.Subhead"
             android:text="@{alumno.nombre}"
             tools:text="Baldomero Llegate Ligero"/>
 
         <TextView
-            android:id="@+id/lblDireccion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -61,6 +62,9 @@
             android:layout_marginRight="@dimen/two_line_text_marginRight"
             android:paddingBottom="@dimen/two_line_secundary_text_paddingBottom"
             android:paddingLeft="@dimen/two_line_text_paddingLeft"
+            android:paddingStart="@dimen/two_line_text_paddingLeft"
+            android:paddingRight="@dimen/two_line_text_paddingLeft"
+            android:paddingEnd="@dimen/two_line_text_paddingLeft"
             android:textSize="14sp"
             android:text="@{alumno.direccion}"
             tools:text="c/ La casa de Baldomero"/>
