PR163 Add Vertical Transformer

--- a/PR163-PageTransformer/app/src/main/res/values/transformaciones.xml
+++ b/PR163-PageTransformer/app/src/main/res/values/transformaciones.xml
@@ -8,5 +8,6 @@
         <item>Cubo</item>
         <item>Texto</item>
         <item>Profundidad</item>
+        <item>Vertical</item>
     </string-array>
 </resources>
