PR004 y PR005 Add Espresso tests

--- a/PR005-IntentsExplicitos/app/src/main/res/layout/activity_alumno.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/layout/activity_alumno.xml
@@ -42,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/edad_hint"
-        android:inputType="number"/>
+        android:inputType="number"
+        android:digits="0123456789"/>
 
     <Button
         android:id="@+id/btnAceptar"
