--- a/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
+++ b/PR010-ScrollView/app/src/main/res/layout/activity_main.xml
@@ -52,8 +52,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:hint="@string/mensaje"
-            android:maxLines="@integer/txtMensaje_maxLines"
-            android:inputType="textMultiLine"
+            android:inputType="textImeMultiLine"
             android:imeOptions="actionDone">
 
             <requestFocus/>
