--- a/PR011-ListViewSimple/app/src/main/res/values/colors.xml
+++ b/PR011-ListViewSimple/app/src/main/res/values/colors.xml
@@ -3,6 +3,5 @@
     <color name="primary">#673AB7</color>
     <color name="primary_dark">#512DA8</color>
     <color name="accent">#8BC34A</color>
-    <color name="accent_light">#AED581</color>
-    <color name="divider">#B6B6B6</color>
+    <color name="disabled">#88000000</color>
 </resources>
