--- a/PR012-ListViewOptimizado/app/src/main/res/layout/activity_main_item.xml
+++ b/PR012-ListViewOptimizado/app/src/main/res/layout/activity_main_item.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:descendantFocusability="afterDescendants"
         android:padding="@dimen/card_padding">
 
         <ImageView
