--- a/PR181-RecyclerViewMVP/app/src/main/res/layout/activity_main.xml
+++ b/PR181-RecyclerViewMVP/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,28 +15,35 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/lstAlumnos"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swlPanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fadeScrollbars="false"
-        android:paddingBottom="@dimen/lst_padding"
-        android:paddingTop="@dimen/lst_padding"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
-        android:id="@+id/lblNoHayAlumnos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawablePadding="@dimen/empty_drawablePadding"
-        android:drawableTop="@drawable/ic_no_hay_alumnos"
-        android:text="@string/no_hay_alumnos"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/lstAlumnos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fadeScrollbars="false"
+            android:paddingBottom="@dimen/lst_padding"
+            android:paddingTop="@dimen/lst_padding"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        <TextView
+            android:id="@+id/lblNoHayAlumnos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawablePadding="@dimen/empty_drawablePadding"
+            android:drawableTop="@drawable/ic_no_hay_alumnos"
+            android:text="@string/no_hay_alumnos"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAccion"
@@ -49,6 +55,6 @@
         android:layout_marginRight="@dimen/fab_margin"
         android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_action_add"
-        tools:ignore="UnusedAttribute"/>
+        tools:ignore="UnusedAttribute" />
 
 </android.support.design.widget.CoordinatorLayout>
