--- a/PR182-FirebaseChat/app/src/main/res/layout/activity_login.xml
+++ b/PR182-FirebaseChat/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flFragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="es.iessaladillo.pedrojoya.pr182.login.LoginActivity">
-
-</RelativeLayout>
+    android:background="@color/primary"
+    tools:context="es.iessaladillo.pedrojoya.pr182.login.LoginActivity" />
