--- a/PR182-FirebaseChat/app/src/main/res/layout/fragment_contacts.xml
+++ b/PR182-FirebaseChat/app/src/main/res/layout/fragment_contacts.xml
@@ -7,7 +7,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 tools:context=".contacts.ContactsFragment"
-                tools:showIn="@layout/activity_main">
+                tools:showIn="@layout/activity_contacts">
 
     <TextView
         android:layout_width="wrap_content"
