--- a/PR182-FirebaseChat/app/src/main/res/values/dimens.xml
+++ b/PR182-FirebaseChat/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="login.lblAppName.padding">40dp</dimen>
+    <dimen name="login.root.padding">24dp</dimen>
+    <dimen name="login.root.vertical_margin">24dp</dimen>
 </resources>
