--- a/PR182-FirebaseChat/app/src/main/res/values/styles.xml
+++ b/PR182-FirebaseChat/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -17,5 +17,29 @@
            parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+
+    <!-- Theme for LoginActivity -->
+    <style name="LoginTheme" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- Theme for LoginActivity TextInputLayout -->
+    <style name="LoginHintText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/icons</item>
+    </style>
+
+    <!-- Theme for LoginActivity InputLayoutTextView -->
+    <style name="LoginEditText" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/divider</item>
+        <item name="colorControlActivated">@color/icons</item>
+        <item name="android:textColor">@color/icons</item>
+    </style>
+
+    <!-- Theme for LoginActivity raised Button -->
+    <style name="LoginButton" parent="Theme.AppCompat">
+        <!-- Color en estado normal -->
+        <item name="colorButtonNormal">@color/primary_dark</item>
+    </style>
 
 </resources>
